[tool.poetry]
name = "noah"
version = "0.1.0"
description = "NLP Engine for Articles"
authors = ["Theo Alves Da Costa <theo.alves.da.costa@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.7.4"
pandas = "^1.2.0"
jupyter = "^1.0.0"
ipykernel = "^5.4.3"
matplotlib = "^3.3.3"
tqdm = "^4.56.0"
transformers = {extras = ["torch"], version = "^4.2.1"}
airtable-python-wrapper = "^0.15.1"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
